fix for bug #403832 js error, this.tree.view has no properties (regression from bug #402668) r=gavin, a=schrep